Add a new feature

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>ngrok review app</title>
+        <title>New Feature ngrok review app</title>
     </head>
     <body>
         <h1>ngrok review app</h1>
