--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>New Feature ngrok review app</title>
+        <title>CI previews with ngrok</title>
     </head>
     <body>
-        <h1>ngrok review app - Hi Joel!</h1>
+        <h1>Hello from ngrok!</h1>
     </body>
 </html>
